Avoid using deprecated method